# ppt_img_editor

./: .dockerignore  .env.example  .env.google-example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOOGLE_OCR_SETUP_SUMMARY.md  GOOGLE_OCR_完整配置总结.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  test-google-ocr.sh
apps/web/: .eslintrc.json  README.md  index.html  package.json  playwright.config.ts
docker/postgres/: init.sql
docs/: .structure.md  ARCHITECTURE.md  Docker网络访问修复说明.md  Google-OCR-配置指南.md  MAINTENANCE_SUMMARY.md  OCR-Provider-切换指南.md  README.md  开发流程指南.md  验收指引.md
docs/fixes/: Patch生成修复说明.md  selectedLayer同步修复说明.md  导出PNG修复说明.md  导出功能完整修复说明.md  文本编辑器最终修复说明.md  输入框Bug修复说明.md
docs/guides/: TextEditor修复验证指南.md
docs/planning/: Codex执行计划与任务分解-PPT截图文字可编辑化-MVP.md  (+2 more)
services/doc_process/: .flake8  Dockerfile  pyproject.toml  requirements.txt
services/doc_process/mock/: default.json
services/doc_process/src/: config.py  main.py
services/doc_process/src/api/: assets.py  health.py  pages.py  projects.py
services/doc_process/src/models/: __init__.py  base.py  candidate.py  page.py  patch_model.py  project.py
services/doc_process/src/ocr/: __init__.py  azure_provider.py  base.py  google_provider.py  mock_provider.py
services/doc_process/src/patch/: __init__.py  bg_fit.py  compose.py  geometry.py  inpaint.py  mask.py  pipeline.py
services/doc_process/src/storage/: minio_client.py
services/doc_process/src/utils/: export.py  hash.py  image.py  text_style.py
services/doc_process/tests/: conftest.py  test_pages.py  test_upload.py
(+17 files in other folders)
